only change the name of root variable --card

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --bg-color: #f4f4f9;
-    --bg-color-secondary: #e0e0f8;
+    --card: #e0e0f8;
     --text-color: #333;
     --input-border: #ccc;
     --accent: #6C63FF;
@@ -27,7 +27,7 @@ body {
 
 body.dark {
     --bg-color: #2D2A47;
-    --bg-color-secondary: #3E3B60;
+    --card: #3E3B60;
     --text-color: #f4f4f9;
     --input-border: #444466;
 }
@@ -116,7 +116,7 @@ header h1 {
     max-width: 400px;
     padding: 2.5rem 2rem;
     border-radius: 12px;
-    background: var(--bg-color-secondary);
+    background: var(--card);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     transition: all 0.5s ease-in-out;
 }
